update: correctly include popupcontent button template only if needed; class list info. bugfix: slider/youtube video/text = the text was invisible

--- a/public/scss/models/_rex-slider.scss
+++ b/public/scss/models/_rex-slider.scss
@@ -93,7 +93,7 @@
     }
 
     .youtube-player {
-      height: 100%;
+      // height: 100%;
 
       @media screen and (max-width: $small) {
         background-image: none!important;
